parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Content: peg$parseContent },
      peg$startRuleFunction  = peg$parseContent,

      peg$c0 = function(cont) {
          return cont.filter(i => i.type === 'Dependency')
        },
      peg$c1 = function(name, a) {
          return {
            type: 'Dependency',
            tagName: name,
            attributes: a
          }
        },
      peg$c2 = "<",
      peg$c3 = peg$literalExpectation("<", false),
      peg$c4 = ">",
      peg$c5 = peg$literalExpectation(">", false),
      peg$c6 = "TMPL_INCLUDE",
      peg$c7 = peg$literalExpectation("TMPL_INCLUDE", false),
      peg$c8 = "TMPL_REQUIRE",
      peg$c9 = peg$literalExpectation("TMPL_REQUIRE", false),
      peg$c10 = "TMPL_INLINE",
      peg$c11 = peg$literalExpectation("TMPL_INLINE", false),
      peg$c12 = function(attr) { return attr; },
      peg$c13 = /^[a-zA-Z0-9\-_\/:.{}$'"]/,
      peg$c14 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-", "_", "/", ":", ".", "{", "}", "$", "'", "\""], false, false),
      peg$c15 = "=",
      peg$c16 = peg$literalExpectation("=", false),
      peg$c17 = function(name, value) {
          return {
            name,
            value
          }
        },
      peg$c18 = /^[a-zA-Z0-9\-_]/,
      peg$c19 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-", "_"], false, false),
      peg$c20 = "IGNORE-DUPLICATES",
      peg$c21 = peg$literalExpectation("IGNORE-DUPLICATES", false),
      peg$c22 = function() { return ''; },
      peg$c23 = function(s) {
          return s;
        },
      peg$c24 = "\"",
      peg$c25 = peg$literalExpectation("\"", false),
      peg$c26 = "'",
      peg$c27 = peg$literalExpectation("'", false),
      peg$c28 = peg$anyExpectation(),
      peg$c29 = function(str) {
          return str.map(i => i[1]).join('');
        },
      peg$c30 = /^[a-zA-Z0-9\-_\/:.{}$[\]%]/,
      peg$c31 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-", "_", "/", ":", ".", "{", "}", "$", "[", "]", "%"], false, false),
      peg$c32 = "[%",
      peg$c33 = peg$literalExpectation("[%", false),
      peg$c34 = "%]",
      peg$c35 = peg$literalExpectation("%]", false),
      peg$c36 = function(a) {
          return a.map(i => i[1]).join('');
        },
      peg$c37 = peg$otherExpectation("[whitespace control character]"),
      peg$c38 = "-",
      peg$c39 = peg$literalExpectation("-", false),
      peg$c40 = "~.",
      peg$c41 = peg$literalExpectation("~.", false),
      peg$c42 = "~|",
      peg$c43 = peg$literalExpectation("~|", false),
      peg$c44 = "~",
      peg$c45 = peg$literalExpectation("~", false),
      peg$c46 = ".~",
      peg$c47 = peg$literalExpectation(".~", false),
      peg$c48 = "|~",
      peg$c49 = peg$literalExpectation("|~", false),
      peg$c50 = function(t) {
          return false ? t.map(i => i[3]).join('') : '';
        },
      peg$c51 = peg$otherExpectation("[line comment]"),
      peg$c52 = "##",
      peg$c53 = peg$literalExpectation("##", false),
      peg$c54 = function(text) {
          return {
            type: 'LineComment',
            content: text
          }
        },
      peg$c55 = function(text) {
          return false ? text.map(i => i[1]).join('') : '';
        },
      peg$c56 = peg$otherExpectation("[TMPL_COMMENT]"),
      peg$c57 = function(text) {
          return {
            type: 'CommentTag',
            content: text
          }
        },
      peg$c58 = "<TMPL_COMMENT>",
      peg$c59 = peg$literalExpectation("<TMPL_COMMENT>", false),
      peg$c60 = function(text) {
         return false ? text.map(i => i[1]).join('') : '';
       },
      peg$c61 = "</TMPL_COMMENT>",
      peg$c62 = peg$literalExpectation("</TMPL_COMMENT>", false),
      peg$c63 = peg$otherExpectation("[end of line]"),
      peg$c64 = "\n",
      peg$c65 = peg$literalExpectation("\n", false),
      peg$c66 = "\r\n",
      peg$c67 = peg$literalExpectation("\r\n", false),
      peg$c68 = "\r",
      peg$c69 = peg$literalExpectation("\r", false),
      peg$c70 = "\u2028",
      peg$c71 = peg$literalExpectation("\u2028", false),
      peg$c72 = "\u2029",
      peg$c73 = peg$literalExpectation("\u2029", false),
      peg$c74 = peg$otherExpectation("[whitespace]"),
      peg$c75 = "\t",
      peg$c76 = peg$literalExpectation("\t", false),
      peg$c77 = "\x0B",
      peg$c78 = peg$literalExpectation("\x0B", false),
      peg$c79 = "\f",
      peg$c80 = peg$literalExpectation("\f", false),
      peg$c81 = " ",
      peg$c82 = peg$literalExpectation(" ", false),
      peg$c83 = "\xA0",
      peg$c84 = peg$literalExpectation("\xA0", false),
      peg$c85 = "\uFEFF",
      peg$c86 = peg$literalExpectation("\uFEFF", false),
      peg$c87 = /^[ \xA0\u1680\u2000-\u200A\u202F\u205F\u3000]/,
      peg$c88 = peg$classExpectation([" ", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u202F", "\u205F", "\u3000"], false, false),
      peg$c89 = peg$otherExpectation("[end of file]"),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseContent() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseLineComment();
    if (s2 === peg$FAILED) {
      s2 = peg$parseCommentTag();
      if (s2 === peg$FAILED) {
        s2 = peg$parseDepsTag();
        if (s2 === peg$FAILED) {
          s2 = peg$parseText();
        }
      }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseLineComment();
      if (s2 === peg$FAILED) {
        s2 = peg$parseCommentTag();
        if (s2 === peg$FAILED) {
          s2 = peg$parseDepsTag();
          if (s2 === peg$FAILED) {
            s2 = peg$parseText();
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseDepsTag() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parseOpenBracket();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWhiteSpaceControlStart();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseWhiteSpace();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseWhiteSpace();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseDepsTagName();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseWhiteSpace();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parseWhiteSpace();
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parseLineTerminator();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parseLineTerminator();
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parseDepsTagContent();
                if (s7 !== peg$FAILED) {
                  s8 = [];
                  s9 = peg$parseWhiteSpace();
                  while (s9 !== peg$FAILED) {
                    s8.push(s9);
                    s9 = peg$parseWhiteSpace();
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = [];
                    s10 = peg$parseLineTerminator();
                    while (s10 !== peg$FAILED) {
                      s9.push(s10);
                      s10 = peg$parseLineTerminator();
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parseWhiteSpaceControlEnd();
                      if (s10 === peg$FAILED) {
                        s10 = null;
                      }
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parseCloseBracket();
                        if (s11 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c1(s4, s7);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseOpenBracket() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 60) {
      s0 = peg$c2;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }

    return s0;
  }

  function peg$parseCloseBracket() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 62) {
      s0 = peg$c4;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }

    return s0;
  }

  function peg$parseDepsTagName() {
    var s0;

    if (input.substr(peg$currPos, 12) === peg$c6) {
      s0 = peg$c6;
      peg$currPos += 12;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 12) === peg$c8) {
        s0 = peg$c8;
        peg$currPos += 12;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 11) === peg$c10) {
          s0 = peg$c10;
          peg$currPos += 11;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
      }
    }

    return s0;
  }

  function peg$parseDepsTagContent() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = [];
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parseWhiteSpace();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseWhiteSpace();
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parseLineTerminator();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseDepsTagAttributes();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseLineComment();
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          if (s5 !== peg$FAILED) {
            s6 = [];
            s7 = peg$parseWhiteSpace();
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parseWhiteSpace();
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parseLineTerminator();
              if (s7 === peg$FAILED) {
                s7 = null;
              }
              if (s7 !== peg$FAILED) {
                peg$savedPos = s1;
                s2 = peg$c12(s4);
                s1 = s2;
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$currPos;
        s2 = [];
        s3 = peg$parseWhiteSpace();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseWhiteSpace();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLineTerminator();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseDepsTagAttributes();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseLineComment();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parseWhiteSpace();
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$parseWhiteSpace();
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseLineTerminator();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s1;
                    s2 = peg$c12(s4);
                    s1 = s2;
                  } else {
                    peg$currPos = s1;
                    s1 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$FAILED;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDepsTagAttributes() {
    var s0;

    s0 = peg$parseSingleStaticAttribute();
    if (s0 === peg$FAILED) {
      s0 = peg$parsePairAttributeValue();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSingleAttributeValue();
      }
    }

    return s0;
  }

  function peg$parseSingleAttributeValue() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c13.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c14); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c13.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parsePairAttributeValue() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseAttributeName();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 61) {
        s2 = peg$c15;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseAttributeValue();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c17(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAttributeName() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c18.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c18.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c19); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseAttributeValue() {
    var s0;

    s0 = peg$parseStringValue();
    if (s0 === peg$FAILED) {
      s0 = peg$parsePerlExpression();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSimpleAttributeValue();
      }
    }

    return s0;
  }

  function peg$parseSingleStaticAttribute() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 17) === peg$c20) {
      s1 = peg$c20;
      peg$currPos += 17;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c21); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c22();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseStringValue() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseStringQuote();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseStringValueContent();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseStringQuote();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c23(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStringQuote() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 34) {
      s0 = peg$c24;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c25); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 39) {
        s0 = peg$c26;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c27); }
      }
    }

    return s0;
  }

  function peg$parseStringValueContent() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$currPos;
    peg$silentFails++;
    s4 = peg$parseStringQuote();
    peg$silentFails--;
    if (s4 === peg$FAILED) {
      s3 = void 0;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      if (input.length > peg$currPos) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }
      if (s4 !== peg$FAILED) {
        s3 = [s3, s4];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      s4 = peg$parseStringQuote();
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = void 0;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c28); }
        }
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c29(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseSimpleAttributeValue() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c30.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c31); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c30.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c31); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parsePerlExpression() {
    var s0, s1, s2, s3;
